--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 raw.githubusercontent.com_jlmakes_scrollreveal_master_dist_scrollreveal.min.js
+raw.githubusercontent.com_jlmakes_scrollreveal_master_dist_scrollreveal.min.js
